# automerge

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.nix  Cargo.toml  Decimal to Binary  LICENSE  Makefile  README.md  SIGNATURES.md  TODO.js  TODO.md  VIEWS.md  build.rs  crates.js  deny.toml  flake.nix  help.html  howtosplit.adoc  index.html  lowlevel.md  search-index.js  settings.html  source-files.js  src-files.js  testchange  testdoc  todo.adoc  travis.yml
automerge/: Cargo.toml  TODO.md  all.html  constant.ROOT.html  enum.AutomergeError.html  enum.BackendError.html  enum.DecodingError.html  enum.EncodingError.html  enum.FrontendError.html  enum.InvalidChangeError.html  enum.InvalidChangeRequest.html  enum.InvalidPatch.html  enum.LoadChangeError.html  enum.MapType.html  enum.ObjId.html  enum.ObjIdFromBytesError.html  enum.ObjType.html  enum.OnPartialLoad.html  enum.OpType.html  enum.ParseChangeHashError.html  enum.Patch.html  enum.PatchAction.html  enum.Primitive.html  enum.Prop.html  enum.ScalarValue.html  enum.SequenceType.html  enum.StringMigration.html  enum.TextEncoding.html  enum.Value.html  enum.VerificationMode.html  index.html  macro.__log!.html  macro.__log.html  macro.hydrate_list!.html  macro.hydrate_list.html  macro.hydrate_map!.html  macro.hydrate_map.html  macro.log.html  sidebar-items.js  struct.ActorId.html  (+39 more)
automerge-backend/: Cargo.toml  README.md  TODO.md
automerge-backend-wasm/: .gitignore  Cargo.toml  GOALS_AND_ISSUES.md  LICENSE  README.md  columnar.js  index-async.js  index-bundler.js  index-node.js  index.js  make-asmjs  make-async  make-sync  makeasmjs  package-sync.json  package.json  package.json-mjs  package.json-nodejs  package.pkg.json  pkg.js  shared.js  webpack.config.js
automerge-backend-wasm/scripts/: js_tests.sh
automerge-backend-wasm/src/: lib.rs  ser.rs  types.rs
automerge-backend-wasm/static.old/: index.html
automerge-backend-wasm/test/: backend_test.js  mocha.opts
automerge-backend-wasm/tests/: app.rs
automerge-backend/benches/: 1000_list_ops.json  load_list_ops.rs
automerge-backend/src/: actor_histories.rs  actor_map.rs  actor_states.rs  backend.rs  change.rs  columnar.rs  concurrent_operations.rs  decoding.rs  encoding.rs  error.rs  event_handlers.rs  expanded_op.rs  helper.rs  internal.rs  lib.rs  obj_alias.rs  object_store.rs  op.rs  op_handle.rs  op_set.rs  op_type.rs  operation_with_metadata.rs  ordered_set.rs  patch.rs  patch_serialization.rs  patches.rs  pending_diff.rs  protocol.rs  protocol_serialization.rs  serialize.rs  skip_list.rs  sync.rs  time.rs  undo_operation.rs  value.rs  vector_clock.rs
automerge-backend/tests/: apply_change.rs  apply_local_change.rs  backend_tests.rs  bad_hashes.rs  get_changes.rs  get_patch.rs  load.rs
automerge-c/: CMakeLists.txt  Cargo.toml  Makefile  README.md  annotated.html  automerge.c  automerge.h  automerge_8h.html  automerge_8h_source.html  build.rs  cbindgen.toml  classes.html  dir_149c96bfe83c7b96c4896dff8b7c3571.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_75a88dd7ca45af6981e3559688873369.html  dir_c27e2f7f6a7bb12045bedb015c0607bf.html  dir_d50721c61d1fc08d2b134745b591c862.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_f.html  functions_func.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_r.html  functions_s.html  functions_t.html  functions_type.html  functions_u.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  group__enumerations.html  (+51 more)
automerge-c-v2/: .gitignore  CMakeLists.txt  Cargo.toml  automerge.c  automerge.h  build.rs  check_msgpack.py
automerge-c-v2/examples/: generate_msgpack.rs
automerge-c-v2/src/: CMakeLists.txt  lib.rs
automerge-c/cmake/: config.h.in  file_regex_replace.cmake
automerge-c/examples/: CMakeLists.txt  README.md  quickstart.c
automerge-c/html/: annotated.html  automerge_8h.html  classes.html  dir_c27e2f7f6a7bb12045bedb015c0607bf.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_eval.html  index.html  structAMchange.html  structAMchangeHashes-members.html  structAMchanges-members.html  structAMdoc.html  structAMobjId.html  structAMsyncHave.html  structAMsyncHaves.html  structAMsyncMessage.html  structAMsyncState.html  structAMvalue-members.html  structAMvalue.html
automerge-c/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js  variables_d.js
automerge-c/src/: CMakeLists.txt  actor_id.rs  api_result.rs  byte_span.rs  change.rs  change_hashes.rs  changes.rs  doc.rs  lib.rs  obj.rs  result.rs  result_stack.rs  strings.rs  strs.rs  sync.rs  utils.rs
automerge-c/test/: CMakeLists.txt  actor_id_tests.c  amdoc_property_tests.c  amlistput_tests.c  amlistset_tests.c  ammapput_tests.c  ammapset_tests.c  doc_tests.c  group_state.c  group_state.h  list_tests.c  main.c  (+8 more)
automerge-cli/: Cargo.toml  IDEAS.md
automerge-frontend/: Cargo.toml  README.md
automerge-protocol/: Cargo.toml  log
automerge-py/: Cargo.toml  publish.sh  pyproject.toml  test.py
automerge-wasm/: .gitignore  Cargo.toml  README.md  attr_bug.js  index.d.ts  node-index.js  nodejs-index.js  package.json  tsconfig.json  web-index.js
edit-trace/: .gitignore  Cargo.toml  Makefile  README.md  automerge-1.0.js  automerge-js.js  automerge-rs.js  automerge-text.js  automerge-wasm.js  baseline.js  wasm-text.js
perf/: Cargo.toml  all.html  final.json  fn.f.html  fn.f_sync.html  fn.g.html  fn.h.html  fn.main.html  fn.trace.html  index.html  sidebar-items.js
rust/: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  deny.toml
(+16833 files in other folders)
