[package]
name = "automerge-rs"
version = "0.0.1"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "automerge"

[dependencies]
uuid = "0.4"
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
