[workspace]
members = [
    "crates/automerge",
    "crates/automerge-c",
    "crates/automerge-cli",
    "crates/automerge-wasm",
    "crates/edit-trace",
]
resolver = "2"

[profile.release]
debug = true
lto = true
opt-level = 'z'

[profile.bench]
debug = true

[profile.release.package.automerge-wasm]
debug = false
opt-level = 'z'
