# You must change these to your own details.
[package]
name = "automerge-backend-wasm"
description = ""
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>","Orion Henry <orion@inkandswitch.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib","rlib"]


[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
automerge-backend = { path = "../automerge-backend" }
js-sys = "^0.3"
serde = "^1.0"
serde_json = "^1.0"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
futures = "^0.1"
wasm-bindgen-futures = "^0.3"
wasm-bindgen-test = "^0.3"
