# You must change these to your own details.
[package]
name = "automerge-backend-wasm"
description = "An js/wasm wrapper for the rust implementation of automerge-backend"
repository = "https://github.com/automerge/automerge-rs"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>","Orion Henry <orion@inkandswitch.com>", "Martin Kleppmann"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib","rlib"]

[features]
# default = ["console_error_panic_hook", "wee_alloc"]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "^0.1", optional = true }
# wee_alloc = { version = "^0.4", optional = true }
automerge-backend = { path = "../automerge-backend" }
automerge-protocol = { path = "../automerge-protocol" }
js-sys = "^0.3"
serde = "^1.0"
serde_json = "^1.0"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[dev-dependencies]
futures = "^0.1"
wasm-bindgen-futures = "^0.3"
wasm-bindgen-test = "^0.3"
