[package]
name = "automerge-backend"
version = "0.0.1"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
uuid = { version = "^0.5.1", features=["v4"] }
wasm-bindgen = "^0.2"
js-sys = "^0.3"
im-rc = "^14.3.0"
sha2 = "^0.8.1"
hex = "^0.4.2"
rand = { version = "^0.7.3", features=["wasm-bindgen"] }
leb128 = "^0.2.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

