[package]
name = "automerge-backend"
version = "0.0.1"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
wasm-bindgen = "^0.2"
js-sys = "^0.3"
hex = "^0.4.2"
rand = { version = "^0.7.3", features=["small_rng"] }
maplit = "^1.0.2"
sha2 = "^0.8.1"
leb128 = "^0.2.4"
automerge-protocol = { path = "../automerge-protocol" }
fxhash = "^0.2.1"
thiserror = "1.0.16"
itertools = "0.9.0"
tracing = { version = "0.1.25", features = ["log"] }
flate2 = "1.0.20"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
test-env-log = "0.2.6"
env_logger = "*"
tracing-subscriber = {version = "0.2", features = ["chrono", "env-filter", "fmt"]}
