[package]
name = "automerge-c-v2"
version = "0.1.0"
authors = ["Orion Henry <orion.henry@gmail.com>"]
edition = "2018"

[lib]
name = "automerge"
crate-type = ["cdylib", "staticlib"]
bench = false

[dependencies]
automerge-backend = { path = "../automerge-backend" }
automerge-protocol = { path = "../automerge-protocol" }
libc = "^0.2"
serde = "^1.0"
serde_json = "^1.0"
errno = "^0.2"
thiserror = "1.0.16"
rmp = "0.8.10"
rmp-serde = "0.15.4"

[dev-dependencies]
rmpv = "0.4.7"

[build-dependencies]
cbindgen = "^0.14"
