[package]
name = "automerge-c"
version = "0.1.0"
authors = ["Orion Henry <orion.henry@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "automerge"
crate-type = ["cdylib", "staticlib"]
bench = false
doc = false

[dependencies]
automerge = { path = "../automerge" }
libc = "^0.2"
serde = "^1.0"
serde_json = "^1.0"
errno = "^0.2"
thiserror = "1.0.16"
rmp = "0.8.10"
rmp-serde = "0.15.4"

[build-dependencies]
cbindgen = "^0.14"
