[package]
name = "automerge-cli"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "automerge"
path = "src/main.rs"
bench = false
doc = false

[dependencies]
clap = "3.0.0-beta.2"
serde_json = "^1.0"
anyhow = "1.0"
atty = "0.2"
thiserror = "1.0.16"
combine = "4.5.2"
maplit = "1.0.2"
colored_json = "2.1.0"

automerge-backend = { path = "../automerge-backend" }
automerge-frontend = { path = "../automerge-frontend" }
automerge-protocol = { path = "../automerge-protocol" }

[dev-dependencies]
duct = "0.13"
