[package]
name = "automerge-frontend"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge-protocol = { path = "../automerge-protocol" }
futures = "0.3.4"
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
uuid = { version = "^0.5.1", features=["v4"] }
maplit = "1.0.2"
thiserror = "1.0.16"
im = "15.0.0"

[dev-dependencies]
automerge-backend = { path = "../automerge-backend" }
