[package]
name = "automerge-frontend"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge-protocol = { path = "../automerge-protocol" }
futures = "0.3.4"
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
uuid = { version = "^0.8.2", features=["v4"] }
maplit = "1.0.2"
thiserror = "1.0.16"
im-rc = "15.0.0"
unicode-segmentation = "1.7.1"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2.2", features=["js"] }
uuid = { version = "0.8.1", features = ["wasm-bindgen", "v4", "serde"] }

[dev-dependencies]
automerge-backend = { path = "../automerge-backend" }
criterion = "0.3.3"
rand = "0.8.2"
env_logger = "0.8.3"
log = "0.4.14"
wasm-bindgen-test = "0.3.22"

[[bench]]
name = "statetree_apply_diff"
harness = false

[[bench]]
name = "change"
harness = false

[features]
default = ["std"]
std = []
