[package]
name = "automerge-protocol"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "^0.4.2"
sha2 = "^0.8.1"
leb128 = "^0.2.4"
uuid = { version = "^0.5.1", features=["v4"] }
thiserror = "1.0.16"
serde = { version = "^1.0", features=["derive"] }
