[package]
name = "automerge-protocol"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
hex = "^0.4.2"
uuid = { version = "^0.8.2", features=["v4"] }
thiserror = "1.0.16"
serde = { version = "^1.0", features=["derive"] }
strum = { version = "0.21.0", features=["derive"]}
arbitrary = { version = "1", features = ["derive"], optional = true }
smol_str = { version = "0.1.18", features = ["serde"] }
tinyvec = { version = "1.3.0", features = ["alloc"] }

[dev-dependencies]
maplit = "^1.0.2"
serde_json = { version = "^1.0.61", features=["float_roundtrip"], default-features=true }
proptest = "0.10.1"
rmp = "0.8.10"
rmp-serde = "0.15.4"

[features]
derive-arbitrary = ["arbitrary", "tinyvec/arbitrary"]
