# You must change these to your own details.
[package]
name = "automerge-wasm"
description = "An js/wasm wrapper for the rust implementation of automerge-backend"
# repository = "https://github.com/automerge/automerge-rs"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>","Orion Henry <orion@inkandswitch.com>", "Martin Kleppmann"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib","rlib"]
bench = false

[features]
# default = ["console_error_panic_hook", "wee_alloc"]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "^0.1", optional = true }
# wee_alloc = { version = "^0.4", optional = true }
automerge = { path = "../automerge" }
js-sys = "^0.3"
serde = "^1.0"
serde_json = "^1.0"
rand = { version = "^0.8.4" }
getrandom = { version = "^0.2.2", features=["js"] }
uuid = { version = "^0.8.2", features=["v4", "wasm-bindgen", "serde"] }
serde-wasm-bindgen = "0.1.3"
serde_bytes = "0.11.5"
unicode-segmentation = "1.7.1"
hex = "^0.4.3"

[dependencies.wasm-bindgen]
version = "^0.2"
#features = ["std"]
features = ["serde-serialize", "std"]

[package.metadata.wasm-pack.profile.release]
# wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]



[dev-dependencies]
futures = "^0.1"
wasm-bindgen-futures = "^0.4"
wasm-bindgen-test = "^0.3"
