[package]
name = "automerge"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/automerge/automerge-rs"
documentation = "https://automerge.org/automerge-rs/automerge/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
optree-visualisation = ["dot"]
wasm = ["js-sys", "wasm-bindgen"]

[dependencies]
hex = "^0.4.3"
leb128 = "^0.2.5"
sha2 = "^0.10.0"
rand = { version = "^0.8.4" }
thiserror = "^1.0.16"
itertools = "^0.10.3"
flate2 = "^1.0.22"
nonzero_ext = "^0.2.0"
uuid = { version = "^0.8.2", features=["v4", "wasm-bindgen", "serde"] }
smol_str = { version = "^0.1.21", features=["serde"] }
tracing = { version = "^0.1.29", features = ["log"] }
fxhash = "^0.2.1"
tinyvec = { version = "^1.5.1", features = ["alloc"] }
serde = { version = "^1.0", features=["derive"] }
dot = { version = "0.1.4", optional = true }
js-sys = { version = "^0.3", optional = true }
wasm-bindgen = { version = "^0.2", optional = true }

[dependencies.web-sys]
version = "^0.3.55"
features = ["console"]

[dev-dependencies]
pretty_assertions = "1.0.0"
proptest = { version = "^1.0.0", default-features = false, features = ["std"] }
serde_json = { version = "^1.0.73", features=["float_roundtrip"], default-features=true }
maplit = { version = "^1.0" }
decorum = "0.3.1"
