[package]
name = "automerge"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/automerge/automerge-rs"
documentation = "https://automerge.org/automerge-rs/automerge/"
rust-version = "1.57.0"
description = "A JSON-like data structure (a CRDT) that can be modified concurrently by different users, and merged again automatically"

[features]
optree-visualisation = ["dot", "rand"]
wasm = ["js-sys", "wasm-bindgen", "web-sys", "uuid/wasm-bindgen"]

[dependencies]
hex = "^0.4.3"
leb128 = "^0.2.5"
sha2 = "^0.10.0"
thiserror = "^1.0.16"
itertools = "^0.10.3"
flate2 = "^1.0.22"
uuid = { version = "^0.8.2", features=["v4", "serde"] }
smol_str = { version = "^0.1.21", features=["serde"] }
tracing = { version = "^0.1.29" }
fxhash = "^0.2.1"
tinyvec = { version = "^1.5.1", features = ["alloc"] }
serde = { version = "^1.0", features=["derive"] }

# optional deps
dot = { version = "0.1.4", optional = true }
js-sys = { version = "^0.3", optional = true }
wasm-bindgen = { version = "^0.2", optional = true }
rand = { version = "^0.8.4", optional = true }

[dependencies.web-sys]
version = "^0.3.55"
features = ["console"]
optional = true

[dev-dependencies]
pretty_assertions = "1.0.0"
proptest = { version = "^1.0.0", default-features = false, features = ["std"] }
serde_json = { version = "^1.0.73", features=["float_roundtrip"], default-features=true }
maplit = { version = "^1.0" }
decorum = "0.3.1"
criterion = "0.3.5"
test-log = { version = "0.2.10", features=["trace"], default-features = false}
tracing-subscriber = {version = "0.3.9", features = ["fmt", "env-filter"] }

[[bench]]
name = "range"
harness = false

[[bench]]
name = "map"
harness = false

[[bench]]
name = "sync"
harness = false
