[package]
name = "edit-trace"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = { path = "../automerge" }
criterion = "0.3.5"
json = "0.12.4"
rand = "^0.8"

[[bench]]
name = "main"
harness = false
