[package]
name = "edit-trace"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
storage-v2 =[ "automerge/storage-v2" ]

[dependencies]
automerge = { path = "../automerge" }
criterion = "0.3.5"
json = "0.12.4"
rand = "^0.8"


[[bin]]
name = "edit-trace"
doc = false
bench = false

[[bench]]
debug = true
name = "main"
harness = false

