[package]
name = "perf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = { path = "../automerge" }
automerge-backend = { path = "../automerge-backend" }
automerge-frontend = { path = "../automerge-frontend" }
automerge-protocol = { path = "../automerge-protocol" }
rand = "0.8.2"
maplit = "^1.0.2"
unicode-segmentation = "1.7.1"
serde = "1.0.126"
serde_json = "1.0.64"
smol_str = "0.1.17"
