[workspace]
members = [
    "automerge",
    "automerge-c",
    "automerge-cli",
    "automerge-test",
    "automerge-wasm",
    "edit-trace",
    "hexane",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
debug = 0

[profile.bench]
debug = true
