[package]
name = "automerge-cli"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"
license = "MIT"
rust-version = "1.57.0"

[[bin]]
name = "automerge"
path = "src/main.rs"
bench = false
doc = false

[dependencies]
clap = {version = "~3.1", features = ["derive"]}
serde_json = "^1.0"
anyhow = "1.0"
atty = "^0.2"
thiserror = "^1.0"
combine = "^4.5"
maplit = "^1.0"
colored_json = "^2.1"
tracing-subscriber = "~0.3"

automerge = { path = "../automerge" }

[dev-dependencies]
duct = "^0.13"
